UPDATE: Fixed horizontal scroll + resizing

--- a/blocks/card.css
+++ b/blocks/card.css
@@ -31,6 +31,7 @@
     bottom: 270px;
     margin: 0;
     padding: 0;
+    width: 0px;
 }
 
 .card__delete-button{
